--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@nextui-org/react": "^2.4.6",
     "autoprefixer": "^10.4.20",
     "clsx": "^2.1.1",
+    "js-cookie": "^3.0.5",
     "mkcert": "^3.2.0",
     "next": "14.2.9",
     "prettier": "^3.3.3",
